2001-03-29  H.J. Lu  <hjl@gnu.org>

	* gas/i386/relax.s: New test for relaxation between sections.
	* gas/i386/relax.d: New.

	* gas/i386/i386.exp: Add tests for ELF.

2001-03-27  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/lineno.d: Allow for the possibility that
	the local labels won't be in the objdump output.  Match
	zeros in addresses using '+' for better compatibility with
	different targets.

2001-03-26  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/sync.s: Declare 'foo' as a function so that this
	test will work on properly on ECOFF targets.

2001-03-24  Alan Modra  <alan@linuxcare.com.au>

	* gas/i386/ssemmx2.s: Change movntq to movntdq.
	* gas/i386/ssemmx2.d: Matching change.

2001-03-23  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/pic-err-1.s, gas/cris/rd-pic-1.s, gas/cris/rd-pic-1.d:
	New tests.

	* gas/cris/branch-warn-1.s, gas/cris/branch-warn-2.s,
	gas/cris/branch-warn-3.s: Tweak for fixed FIXME:s.

2001-03-19  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* gas/vax/quad.exp: Correct expected result.

2001-03-19  Andreas Schwab  <schwab@suse.de>

	* gas/m68k/pcrel.s: Force alignment to 8 byte boundary to get
	consistent output across targets.
	* gas/m68k/pcrel.d: Adjusted.

2001-03-18  H.J. Lu  <hjl@gnu.org>

	* gas/i386/intel.s: Move PIC code to ...
	* gas/i386/intelpic.s: New. Here.
	* gas/i386/intel.d: Updated.
	* gas/i386/intelpic.d: New.

	* gas/i386/i386.exp: Check PIC code in Intel syntax for ELF
	targets only.

2001-03-18  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* gas/mri/mri.exp: Fix test of m6811/m6812 targets.

2001-02-26  H.J. Lu  <hjl@gnu.org>

	* gas/ia64/opc-a-err.l: Change "Operand [3|4]" to "Operand [34]".

2001-02-23  H.J. Lu  <hjl@gnu.org>

	* gas/ia64/opc-a-err.l: Fix "cmp4.lt.or".

	* gas/ia64/opc-a.pl: Add tests for pseudo-ops for "cmp" and
	"cmp4".
	* gas/ia64/opc-a.s: Rebuilt.
	* gas/ia64/opc-a.d: Likewise.

2001-02-17  Chris Demetriou  <cgd@broadcom.com>
